[tool.poetry]
name = "onlyscores"
version = "0.0.1"
description = "Web server for OnlyScores, the only scorekeeping app you need."
authors = ["Justin Arista Kasin <30282499+zegheim@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
prisma = "^0.6.6"
uvicorn = {extras = ["standard"], version = "^0.18.2"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
